# crawl4ai-rag

./: .clinerules  .env.example  README.md  __init__.py  alignment-plan.md  calling-github-mcp.txt  cli.py  config.py  crawl4ai assistant plan.txt  debug_crawl_result.py  debug_output.txt  main.py  pyproject.toml  remaining_github_mcp_edits.md  test_documentation_analyzer.py  test_github_mcp.py  test_github_scraper.py
analyzer/: __init__.py  github_mcp.py  github_mcp_service.py  website_analyzer.py
analyzer/strategies/: __init__.py  github_strategy.py
app/: __init__.py  embeddings.py  generator.py  main.py  retrieval.py
codegen/: __init__.py  generator.py
codegen/templates/: generic_scraper.j2  github_docs_scraper.j2
crawlers/: __init__.py
crawlers/docs/: __init__.py
crawlers/github/: __init__.py
db_client/: __init__.py  client.py  repository.py
exporters/: __init__.py  markdown_exporter.py
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
ottomator-crawl4ai-agent-reference/: crawl_pydantic_ai_docs.py  pydantic_ai_expert.py  site_pages.sql
output/github_crawl4ai/: error.md
output/github_test/: error.md
supabase/: __init__.py  client.py  documentation_metrics.sql  repository.py
utils/: __init__.py  github_mcp_http.py  logging.py  mcp_client.py  mcp_subprocess.py  validation.py
